--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-
-/.obsidian/workspace.json
+.obsidian/workspace.json
+.obsidian/workspace-mobile.json
+.obsidian/appearance.json
+.obsidian/app.json
